Sakshi made following changes:- 1)edited navbar to resolve top bar visibility issue and some style changes 2)removed Wishlist and pin code selector from navbar 3)added cart item counter 4)added cart.html and cart.js 5)Chocolate page was edited for cart functionality 6)linked chocolates, cake and cart pages to navbar 7)Continue shopping while cart is empty is redirecting to navbar file ,(will link that to home page once ready)

--- a/Navbar/style.css
+++ b/Navbar/style.css
@@ -26,11 +26,15 @@ header{
     height: 50px;
 }
 
-.topbar{
+.topbar {
   height: 40px;
   display: flex;
-  justify-content: baseline;
+  justify-content: right; 
+  align-items: center;
+  overflow: hidden; 
+  
 }
+
 .logo{
     padding-top: 0px ;
     cursor: pointer;
@@ -71,12 +75,12 @@ header{
     width: 100%;
     height: 80x; 
     padding: 0 20px;
-
+    background-color: #FEF1F0;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .search-container {
-    flex-grow: 1;
+   flex-grow: 1;
     margin: 0 20px;
 }
 
@@ -105,6 +109,17 @@ header{
 .icon-container .material-icons:hover {
     color: hotpink;
   }
+  .cart-count {
+    position: absolute;
+    top: -8px;
+    right: -4px;
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    padding: 2px 6px;
+    border-radius: 50%;
+    font-weight: bold;
+  }
 .search {
     height: 20px;
     width: 300px;
@@ -127,7 +142,6 @@ header{
     justify-content: center;
 }
 
-
 .topic_links {
     display: flex;
     justify-content: space-evenly;
@@ -135,7 +149,7 @@ header{
     gap: 60px; 
     width: 100%;
     height: 50px; 
-    background-color: #f5f5f5;
+    background-color: white;
     list-style: none;
   }
   
@@ -160,17 +174,6 @@ header{
   div{
     background: transparent;
   }
-  .delivery-box {
-    display: flex;
-    align-items: center;
-    background: linear-gradient(to right, #ffe4ec, #e6f0ff);
-    border-radius: 8px;
-    padding: 10px 16px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    width: 250px;
-    font-size: 10px;
-    font-weight: bold;
-  }
 
   .flag {
     width: 24px;
@@ -178,24 +181,8 @@ header{
     margin-right: 8px;
   }
 
-  .country-code {
-    font-weight: bold;
-    margin-right: 16px;
-  }
-
   .material-icons {
     font-size: 18px;
     vertical-align: middle;
     margin-right: 4px;
-  }
-
-  .location-text {
-    display: flex;
-    align-items: center;
-    color: #333;
-  }
-
-  .edit-icon {
-    margin-left: 8px;
-    cursor: pointer;
   }
